--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 29
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.zenappse.memorymatcher"
-        minSdkVersion 17
-        targetSdkVersion 21
+        minSdkVersion 20
+        targetSdkVersion 29
         versionCode 2
         versionName "0.2"
     }
@@ -18,12 +18,20 @@ android {
         }
     }
 }
+allprojects {
+    repositories {
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+    }
+}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0+'
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
         transitive = true
     }
-    compile 'com.google.android.gms:play-services:6.5.87'
+    implementation 'com.google.android.gms:play-services:6.5.87'
 }
